# agate-python-client

./: .gitignore  .ruff.toml  Makefile  README.md  pom.xml  pyproject.toml
.github/workflows/: ci.yml
obiba_agate/: console.py  core.py
src/main/assembly/: package.xml
src/main/python/agate/: core.py  rest.py
src/main/python/agate/auth_management/: application.py  group.py  user.py
src/main/python/scripts/: agate
tests/: test_restCall.py
