[tool.poetry]
name = "obiba-agate"
version = "3.1.0"
description = "OBiBa/Agate python client."
authors = ["Yannick Marcon <yannick.marcon@obiba.org>"]
license = "GPL-v3"
readme = "README.md"
packages = [{include = "obiba_agate"}]

[tool.poetry.dependencies]
python = "^3.7"
pycurl = "^7.45.2"

[tool.poetry.group.test.dependencies]
pytest = "^7.2.2"

[tool.poetry.scripts]
agate = 'obiba_agate.console:run'

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
